--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,3 +1,68 @@
-<div class="col-md-12">
-This is the about view.
+<div ng-include="'components/navbar/navbar.html'"></div>
+
+<div class="body container-fluid">
+
+  <!-- <p class="page-title">About me</p> -->
+
+  <div class="emojis-wrapper">
+    <div class="emoji emoji1">
+      <div class="mouth"></div>
+    </div>
+    <div class="emoji emoji2">
+      <div class="mouth"></div>
+    </div>
+    <div class="emoji emoji3">
+      <div class="mouth"></div>
+    </div>
+  </div>
+
+  <form action="mailto:cchchoi1986@gmail.com" method="post" enctype="text/plain" class="contact-form">
+    <div class="email-me">
+      <button class="form-submit" type="submit">
+        Email Me
+        <i class="fa fa-envelope">
+        </i>
+    </button>
+    </div>
+  </form>
+  
+  <div class="row contact-icons">
+    <a href="https://www.facebook.com/clement.choi2">
+      <div class="col-xs-2">
+        <i class="fa fa-facebook-official">
+        </i>
+      </div>
+    </a>
+    <a href="http://hk.linkedin.com/in/clementchoi2">
+      <div class="col-xs-2">
+        <i class="fa fa-linkedin-square">
+        </i>
+      </div>
+    </a>
+    <a href="https://instagram.com/cchchoi1986/">
+      <div class="col-xs-2">
+        <i class="fa fa-instagram">
+        </i>
+      </div>
+    </a>
+    <a href="https://github.com/cchchoi1986">
+      <div class="col-xs-2">
+        <i class="fa fa-github">
+        </i>
+      </div>
+    </a>
+    <a href="https://play.spotify.com/user/1276770221">
+      <div class="col-xs-2">
+        <i class="fa fa-spotify">
+        </i>
+      </div>
+    </a>
+    <a href="https://twitter.com/cchchoi1986">
+      <div class="col-xs-2">
+        <i class="fa fa-twitter">
+        </i>
+      </div>
+    </a>
+  </div>
+
 </div>
