--- a/client/index.html
+++ b/client/index.html
@@ -70,12 +70,10 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/blog/blog.controller.js"></script>
-          <script src="app/blog/blog.js"></script>
-          <script src="app/contact/contact.controller.js"></script>
-          <script src="app/contact/contact.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/sandbox/sandbox.controller.js"></script>
+          <script src="app/sandbox/sandbox.js"></script>
           <script src="app/work/work.controller.js"></script>
           <script src="app/work/work.js"></script>
           <script src="components/auth/auth.service.js"></script>
