--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,24 +1,15 @@
 <div ng-include="'components/navbar/navbar.html'">
 </div>
 
-<div class="body">
-  <div class="emojis-wrapper">
-    <div class="emoji emoji1">
-      <div class="mouth"></div>
-    </div>
-    <div class="emoji emoji2">
-      <div class="mouth"></div>
-    </div>
-    <div class="emoji emoji3">
-      <div class="mouth"></div>
-    </div>
-  </div>
+<div class="main-body">
+  <!-- <section id="about" data-type="background" data-speed="10" class="pages">
+    <article>Simple Parallax Scroll</article>
+  </section> -->
+
+  <p class="page-title">
+    Clement Choi
+  </p>
+  <p class="page-subtitle">
+    Web Developer
+  </p>
 </div>
-<h1>
-  Clement Choi
-</h1>
-<h3>
-  Web Dev
-</h3>
-
-
